--- a/aa/bb.html
+++ b/aa/bb.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
    <style>
 nav{
     position: fixed;
@@ -60,6 +60,7 @@ span{
                     <section>
                         <h2>Section #3</h2>
                         <p>
+                            
                             content of section #3
                         </p>
                     </section>
